# jetfuel-proxy-hedging-case-study

./: .gitignore  .pre-commit-config.yaml  Makefile  PROJECT-GUIDE.md  README.md  pyproject.toml
data/processed/: hedged_test_returns.csv  market_data_with_returns.csv
data/raw/: jet_fuel_illiquid.csv  jet_fuel_proxy_prices.csv  proxy_1.csv  proxy_2.csv
notebooks/: 01_eda.ipynb  02_baselines.ipynb  03_dynamic_hedging.ipynb  04_results_tables_figures.ipynb  README.md
reports/: CASE_STUDY.md  README.md  REPORT.md  hedging_report.md
reports/tables/: artifacts_manifest.json  beta_stability.csv  cheap_benchmark_direct_pnl.csv  feature_dataset.csv  method_comparison.csv  multi_proxy_kalman_pnl.csv  multi_proxy_ridge_pnl.csv  rolling_correlations.csv  single_rolling_ols_pnl.csv  single_static_ols_best_proxy_pnl.csv  single_static_ols_pnl.csv  walk_forward_splits.csv
src/: __init__.py  pipeline.py  run_experiments.py
src/config/: __init__.py  default.yaml  settings.py
src/costs/: __init__.py  transaction.py  transaction_costs.py
src/data/: __init__.py  fred.py  illiquid_hub.py  io.py  loaders.py  preprocess.py  synthetic.py
src/evaluation/: __init__.py  metrics.py  report.py
src/features/: __init__.py  build.py  returns.py
src/hedging/: __init__.py  engine.py  strategy.py
tests/: __init__.py  test_baseline_models.py  test_data_ingestion.py  test_evaluation_reporting.py  test_feature_build.py  test_fred_data.py  test_hedging_engine.py  test_kalman_model.py  test_ols_model.py  test_pipeline.py  test_run_experiments.py  test_transaction_costs.py
(+6 files in other folders)
